--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -30,4 +30,50 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+} */
+
+:root {
+  --background-color: rgba(255, 255, 255, 0);
+  --foreground-color: black;
+  --gradient-background: #dce1f8;
+  --accent-color: #6a5ec2;
+  --accent-foreground-color: white;
+}
+
+.dark {
+  --background-color: #00000000;
+  --gradient-background: linear-gradient(to right, #000000, #000000, #1b294a);
+  --foreground-color: white;
+  --accent-color: #55efc4;
+  --accent-foreground-color: black;
+}
+
+body {
+  background-color: var(--background-color);
+  color: var(--foreground-color);
+}
+
+.backdropBlur {
+  -webkit-backdrop-filter: blur(64px);
+  backdrop-filter: blur(64px);
+}
+
+.bg-background {
+  background: var(--gradient-background);
+}
+
+.bg-gradient {
+  background-color: var(--gradient-background);
+}
+
+.text-foreground {
+  color: var(--foreground-color);
+}
+
+.bg-accent {
+  background-color: var(--accent-color);
+}
+
+.text-accent-foreground {
+  color: var(--accent-foreground-color);
 }
